--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -127,6 +127,17 @@ minimum_password_length = 6
 # are: `letters_digits`, `lower_upper_letters_digits`, `lower_upper_letters_digits_symbols`
 password_requirements = ""
 
+# Add Clerk JWT configuration
+[auth.jwt]
+# The JWT secret used to sign the tokens
+secret = "env(CLERK_JWT_VERIFICATION_KEY)"
+# The issuer of the JWT
+issuer = "https://clerk.your-domain.com"
+# The audience of the JWT
+audience = "authenticated"
+# The algorithm used to sign the JWT
+algorithm = "RS256"
+
 [auth.rate_limit]
 # Number of emails that can be sent per hour. Requires auth.email.smtp to be enabled.
 email_sent = 2
