--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/moment": "^2.11.29",
+    "@types/react-big-calendar": "^1.16.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -48,9 +50,11 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
