--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "drizzle-orm": "^0.44.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
