--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "moment": "^2.30.1",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
+    "postgres": "^3.4.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.7.0",
