Update dependencies and modify booking components

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -295,7 +295,7 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 
 [functions.clerk-webhook-handler]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/clerk-webhook-handler/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
