--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@clerk/themes": "^2.2.49",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -54,7 +55,7 @@
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "next": "^15.3.2",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
