--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.21.0",
     "@clerk/themes": "^2.2.49",
     "@hookform/resolvers": "^3.9.1",
